<resources>
    <string name="app_name_release" translatable="false">Passman</string>
    <string name="app_name_alpha" translatable="false">Passman - Alpha Dev</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_login" translatable="false">Passman - Login</string>
    <string name="nchost">Server address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="wrongNCUrl">Incorrect Nextcloud backend URL or unable to connect</string>
    <string name="wrongNCSettings">Settings incorrect</string>
    <string name="net_error">Network error</string>
    <string name="unlock">Unlock</string>
    <string name="wrong_vault_pw">Wrong vault password</string>
    <string name="label">Label</string>
    <string name="email">E-mail</string>
    <string name="URL">URL</string>
    <string name="description">Description</string>
    <string name="copied_to_clipboard">Text copied to clipboard</string>
    <string name="vault_password">Vault password</string>
    <string name="vault_password_save">Save the vault password</string>
    <string name="otp" translatable="false">OTP</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="created">Created:</string>
    <string name="last_accessed">Last accessed:</string>
    <string name="search">Search</string>
    <string name="vault_list_title">Vaults</string>
    <string name="vault_unlock_title">Unlock Vault {vault_name}</string>
    <string name="login_title">Login</string>
    <string name="login_unauthorized">Unauthorized</string>
    <string name="login_servererror">Server error</string>
    <string name="login_unknownerror">Unknown error</string>
</resources>
