<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.wolfi.app.passman.ui.login.LoginBasicFragment">

    <data>
        <variable
            name="viewModel"
            type="es.wolfi.app.passman.ui.login.LoginBasicViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingLeft="@dimen/root_horizontal_margin"
        android:paddingTop="@dimen/root_vertical_margin"
        android:paddingRight="@dimen/root_horizontal_margin"
        android:paddingBottom="@dimen/root_vertical_margin"

        android:theme="@style/AppTheme.NoActionBar.Login">

        <ImageView
            android:id="@+id/login_basic_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:contentDescription="logo"
            android:src="@drawable/logo_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/login_text_color"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_basic_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_host_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@id/login_user_input_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title"

            app:layout_constraintVertical_chainStyle="packed"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_host_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textColor="@color/login_text_color"
                android:textColorHint="@color/login_text_color"
                android:hint="@string/nchost"

                android:text="@{viewModel.hostLiveData}"
                >
                <requestFocus/>
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_user_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@id/login_pass_input_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@id/login_host_input_layout"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textAutoComplete"
                android:text="@{viewModel.userLiveData}"
                android:hint="@string/username"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_pass_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@id/login_user_input_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_basic_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/login_pass_input_layout"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:visibility="invisible"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            tools:text="error placeholder"
            />

        <es.wolfi.app.passman.widget.LoadingButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@id/login_pass_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
